--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,9 @@ version: '2.0'
 services:
   app:
     build: .
-#    image: golang:1.13-alpine3.12
-#    networks:
-#      - host
-#    container_name: expected_move_backend
+    container_name: expected_move_backend
   postgres_db:
     image: postgres:latest
-    networks:
-      host:
-        aliases:
-          - database
     container_name: expected_move_psql
     ports:
       - "5432:5432"
@@ -20,5 +13,3 @@ services:
       - ./volumes/postgres:/var/lib/postgresql/data
     env_file:
       - ./.env
-networks:
-  host:
