always restart docker containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,19 @@ version: '2.0'
 
 services:
   expected_move_scheduler:
+    restart: always
     build: .
     container_name: expected_move_scheduler
     command: ["./main", "scheduleExpectedMoves"]
   prices_scheduler:
+    restart: always
     build: .
     container_name: prices_scheduler
     command: ["./main", "schedulePrices"]
     env_file:
       - ./.env
   postgres_db:
+    restart: always
     image: postgres:latest
     container_name: expected_move_psql
     ports:
